Changes made by Iliya Rachev (rachev.id@gmail.com).

--- a/Cordova-Software-APIs/index.html
+++ b/Cordova-Software-APIs/index.html
@@ -145,7 +145,8 @@ under the License.-->
             </table>
         </div>
         <div id="capture-view" data-id="capture-view" data-role="view" data-layout="api-layout" data-title="Capture API">
-        </div>
+            <a data-role="touch" class="button" data-tap="app.capture.captureImage">Capture Image</a>
+        </div> 
         <div id="connection-view" data-id="connection-view" data-role="view" data-layout="api-layout" data-title="Connection API"
             data-show="app.connectionApi.init" data-hide="app.connectionApi.close">
             <h1 data-bind="text: state"></h1>
