--- a/sky-trails/index.html
+++ b/sky-trails/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Sky Trails</title>
         <meta charset="utf-8" />
         <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
         <link href="styles/main.css" rel="stylesheet" />
@@ -35,101 +35,6 @@
             </div>
         </div>
 
-        <!--Login-->
-        <div id="tabstrip-login" 
-             data-role="view"  
-             data-title="Login" 
-             data-model="app.loginService.viewModel">
-
-            <div class="view-content">
-                <div class="logo"></div>
-                <h3 data-bind="invisible: isLoggedIn">Enter your credentials:</h3>
-                <h1 class="welcome" data-bind="visible: isLoggedIn">
-                    Welcome, <span data-bind="text: username"></span>!
-                </h1>
-
-                <ul data-role="listview" data-style="inset" data-bind="invisible: isLoggedIn">
-                    <li>
-                        <label>
-                            Username
-                            <input type="text" data-bind="value: username"/>
-                        </label>
-                    </li>
-                    <li>
-                        <label>
-                            Password
-                            <input type="password" data-bind="value: password" />
-                        </label>
-                    </li>
-                </ul>
-
-                <div class="buttonArea">
-                    <a id="login" data-role="button" data-bind="click: onLogin, invisible: isLoggedIn" class="login-button">Login</a>
-                    <a id="logout" data-role="button" data-bind="click: onLogout, visible: isLoggedIn" class="login-button">Logout</a>
-                </div>
-            </div>
-
-        </div>
-
-        <!--Location-->
-        <div id="tabstrip-location" 
-             data-role="view"  
-             data-title="Location" 
-             data-init="app.locationService.initLocation" 
-             data-show="app.locationService.show" 
-             data-hide="app.locationService.hide" 
-             data-model="app.locationService.viewModel" 
-             data-stretch="true">
-
-            <div id="map-search-wrap">
-                <button id="map-navigate-home" data-bind="click: onNavigateHome"></button>
-                <form onsubmit="return false;">
-                    <input id="map-address" type="search" data-bind="value: address" placeholder="Address"/>
-                    <input id="map-search" type="submit" value="" data-bind="click: onSearchAddress" />
-                </form>
-            </div>
-            <div id="map-canvas"></div>
-
-        </div>
-
-        <!--Weather-->
-        <div id="tabstrip-weather" 
-             data-role="view"  
-             data-title="Weather" 
-             data-model="app.weatherService.viewModel">
-
-            <div class="weather">
-                <h1>20-Day Forecast</h1>
-
-                <div class="separator">
-                    <div class="dark"></div>
-                    <div class="light"></div>
-                </div>
-
-                <ul class="forecast-list" 
-                    data-role="listview" 
-                    data-bind="source: weatherDataSource" 
-                    data-template="weather-forecast-template">
-                </ul>
-            </div>
-        </div>
-
-        <!--Weather forecast template-->
-        <script type="text/x-kendo-tmpl" id="weather-forecast-template">
-            <div>
-                <div class="position-left">
-                    <span class="weather-info date">${day}</span>
-                </div>
-                <div class="position-right">
-                    <span class="weather-info temperature high">${highTemperature}<sup>&deg;</sup></span>
-                    <span class="weather-info temperature low">${lowTemperature}<sup>&deg;</sup></span>
-                </div>
-                <div class="position-center">
-                    <span class="weather-icon ${image}"></span>
-                </div>
-            </div>
-        </script>
-
         <!--Layout-->
         <div data-role="layout" data-id="tabstrip-layout" >
 
@@ -144,9 +49,9 @@
             <div data-role="footer">
                 <div data-role="tabstrip">
                     <a href="#tabstrip-home" data-icon="home">Home</a>
-                    <a href="#tabstrip-login" data-icon="contacts">Login</a>
-                    <a href="#tabstrip-location" data-icon="search">Location</a>
-                    <a href="#tabstrip-weather" data-icon="globe">Weather</a>
+                    <a href="views/login.html" data-icon="contacts">Login</a>
+                    <a href="views/location.html" data-icon="search">Location</a>
+                    <a href="views/weather.html" data-icon="globe">Weather</a>
                 </div>
             </div>
         </div>
