--- a/sky-trails/index.html
+++ b/sky-trails/index.html
@@ -12,6 +12,8 @@
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
 
         <script src="scripts/login.js"></script>
+        <script src="scripts/trails-tracker.js"></script>
+        <script src="scripts/camera.js"></script>
         <script src="scripts/location.js"></script>
         <script src="scripts/weather.js"></script>
         <script src="scripts/app.js"></script>
@@ -25,7 +27,7 @@
 
             <div class="view-content">
                 <h1>Welcome!</h1>
-                <a id="skin-change" data-role="button" data-click="app.changeSkin">Flat</a>
+                <!-- <a id="skin-change" data-role="button" data-click="app.changeSkin">Flat</a> -->
                 <p>
                     Icenium&trade; enables you to build cross-platform device applications regardless of your
                     development platform by combining the convenience of a local development toolset with the
@@ -50,6 +52,8 @@
                 <div data-role="tabstrip">
                     <a href="#tabstrip-home" data-icon="home">Home</a>
                     <a href="views/login.html" data-icon="contacts">Login</a>
+                    <a href="views/trails-tracker.html" data-icon="globe">Trails Tracker</a>
+                    <a href="views/camera.html" data-icon="camera">Involve!</a>
                     <a href="views/location.html" data-icon="search">Location</a>
                     <a href="views/weather.html" data-icon="globe">Weather</a>
                 </div>
