--- a/sky-trails/index.html
+++ b/sky-trails/index.html
@@ -10,12 +10,12 @@
         <script src="kendo/js/jquery.min.js"></script>
         <script src="kendo/js/kendo.mobile.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+        <script src="min/everlive.all.min.js"></script>
 
         <script src="scripts/login.js"></script>
         <script src="scripts/trails-tracker.js"></script>
         <script src="scripts/camera.js"></script>
         <script src="scripts/location.js"></script>
-        <script src="scripts/weather.js"></script>
         <script src="scripts/app.js"></script>
 
     </head>
@@ -52,10 +52,9 @@
                 <div data-role="tabstrip">
                     <a href="#tabstrip-home" data-icon="home">Home</a>
                     <a href="views/login.html" data-icon="contacts">Login</a>
-                    <a href="views/trails-tracker.html" data-icon="globe">Trails Tracker</a>
-                    <a href="views/camera.html" data-icon="camera">Involve!</a>
+                    <a href="views/trails-tracker.html" data-icon="globe">Tracker</a>
+                    <a href="views/camera.html" data-icon="camera">Take Action!</a>
                     <a href="views/location.html" data-icon="search">Location</a>
-                    <a href="views/weather.html" data-icon="globe">Weather</a>
                 </div>
             </div>
         </div>
